--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,18 @@
 version: "3"
 services:
+  azure-storage:
+    image: azure-storage
+    build:
+      context: ./azure-storage # microservice를 제작할 폴더 지정
+      dockerfile: Dockerfile
+    container_name: video-storage # 생성될 때 생기는 이름
+    ports:
+      - "4000:80" # 외부 포트:컨테이너 포트
+    environment:
+      - PORT=80
+      - STORAGE_ACCOUNT_NAME=<insert your Azure storage account name here>
+      - STORAGE_ACCESS_KEY=<insert your Azure storage account access key here>
+
   minivideo:
     image: minivideo
     build:
@@ -7,8 +20,10 @@ services:
       dockerfile: Dockerfile
     container_name: minivideo # 생성될 때 생기는 이름
     ports:
-      - "4000:80" # 외부 포트:컨테이너 포트
+      - "4001:80" # 외부 포트:컨테이너 포트
     environment:
       - PORT=80
+      - VIDEO_STORAGE_HOST=video-storage
+      - VIDEO_STORAGE_PORT=80
     restart: "no" # 개발에서는 재시작하지 않게 설정하여 오류가 있는 부분을 확인할수 있도록 한다.
 
