--- a/minivideo/Dockerfile
+++ b/minivideo/Dockerfile
@@ -1,9 +1,7 @@
 FROM node:12-alpine
 
-WORKDIR /user/src/app
+WORKDIR /usr/src/app
 COPY package*.json ./
 RUN npm install --only=production
 COPY ./src ./src
-COPY ./videos ./videos
-ENV PORT=3000
 CMD ["npm", "start"]
