--- a/minivideo/package.json
+++ b/minivideo/package.json
@@ -11,7 +11,8 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "express": "^5.0.0-beta.1"
+    "express": "^5.0.0-beta.1",
+    "mongodb": "^3.3.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
