--- a/history/Dockerfile-dev
+++ b/history/Dockerfile-dev
@@ -2,6 +2,6 @@ FROM node:12-alpine
 
 WORKDIR /usr/src/app
 COPY package*.json ./
-CMD npm config set cache-min 9999999 && \
+CMD npm confing set cache-min 9999999 && \
     npm install && \
     npm run start:dev
