--- a/cloud-storage/docker-compose-example.yml
+++ b/cloud-storage/docker-compose-example.yml
@@ -18,8 +18,8 @@ services:
       - "4001:80" # 외부 포트:컨테이너 포트
     environment:
       - PORT=80
-      - STORAGE_ACCOUNT_NAME=<your own account name>
-      - STORAGE_ACCESS_KEY=<your own access key>
+      - STORAGE_ACCOUNT_NAME=<your account name>
+      - STORAGE_ACCESS_KEY=<your access key>
 
   minivideo-dev:
     image: minivideo-dev
@@ -41,4 +41,3 @@ services:
     depends_on:
       - db
     restart: "no" # 개발에서는 재시작하지 않게 설정하여 오류가 있는 부분을 확인할수 있도록 한다.
-
