--- a/cloud-storage/minivideo/Dockerfile-dev
+++ b/cloud-storage/minivideo/Dockerfile-dev
@@ -2,6 +2,7 @@ FROM node:12-alpine
 
 WORKDIR /usr/src/app
 COPY package*.json ./
-CMD npm confing set cache-min 9999999 && \
+CMD npm config set cache-min 9999999 && \
     npm install && \
+    npx wait-port rabbit:5672 && \
     npm run start:dev
