--- a/cloud-storage/minivideo/package.json
+++ b/cloud-storage/minivideo/package.json
@@ -11,8 +11,10 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "amqplib": "^0.10.4",
     "express": "^5.0.0-beta.1",
-    "mongodb": "^3.3.2"
+    "mongodb": "^3.3.2",
+    "wait-port": "^1.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
