--- a/message/recommendations/package.json
+++ b/message/recommendations/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "history",
+  "name": "recommendations",
   "version": "1.0.0",
   "description": "",
   "main": "./src/index.js",
@@ -7,12 +7,16 @@
     "start": "node ./src/index.js",
     "start:dev": "nodemon --legacy-watch ./src/index.js"
   },
+  "keywords": [],
   "author": "",
   "license": "MIT",
-  "devDependencies": {
-    "nodemon": "^3.1.0"
-  },
   "dependencies": {
-    "express": "^4.19.2"
+    "amqplib": "^0.10.4",
+    "express": "^4.17.1",
+    "mongodb": "^3.3.4",
+    "wait-port": "^1.1.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
   }
 }
